# DENSE_MATRIX_CUDA

./: CMakeLists.txt  generate_visual_project.bat
src/: dense_matrix_cuda.cu  dense_matrix_cuda.cuh  utilities.cuh
tests/: functions.cuh  functions.hpp  main.cpp  main.cu
